--- a/src/public/css/estilos.css
+++ b/src/public/css/estilos.css
@@ -9,6 +9,8 @@ body {
 	background: #eeeeee;
 	font-family: "Open Sans", Sans-serif;
 	font-size: 16px;
+	margin: 0%;
+	padding: 0%;
 }
 
 .contenedor {
