--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -15,8 +15,9 @@
 
                 <div class="texto">
                     <h3 class="titulo">Ingeniero de sistemas</h3>
-                    <h3 class="titulo">Oscar eduardo rodriguez castro</h3>
-                    <p>Ingeniero con especializacion en software</p>
+                    <h3 class="titulo"> <p>{{nombre}}</p>
+                    </h3>
+                    <p>{{descripcion}}</p>
                 </div>
             </div>
         </section>
